--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netfile-extract",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Extracts individual sheet data from a netfile zip",
   "main": "netfile-extract.js",
   "bin": {
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "commander": "^2.8.0",
-    "concat-stream": "^1.4.8",
-    "map-object": "^0.0.2",
+    "concat-stream-callback": "^1.0.1",
     "csv-stringify": "^0.0.6",
+    "map-object": "^0.0.2",
     "node-zip": "^1.1.0",
     "xlsx-to-row-sheets": "^0.0.0"
   },
